@@ -1,6 +1,6 @@
 Introduction
 ============
-Once installed this product adds a "Image Editor" tab for the image content type and News Item content type.
+Once installed this product adds a "Image Editor" link near the image widget.
 
 Features
 ========
@@ -26,13 +26,8 @@ Roadmap / Proposal
 Dependencies
 ============
 
-* collective.js.jquery
-* collective.js.jqueryui
+* collective.javascript.jqueryui
 
-Suggestions
-===========
-
-This product depends on collective.js.jqueryui which is great, but not always required on every page load. If you'd like to speed up the page loads of other pages that do not need the extra javascript, you can add this condition, `here.restrictedTraverse('@@image-editor-utility').should_include(request)`, to the jqueryui js entry in portal_javascripts.
 
 Contributors
 ============
