@@ -7,8 +7,8 @@ history = open(join('docs', 'HISTORY.txt')).read()
 
 setup(name = 'Products.ImageEditor',
       version = version,
-      description = 'A product that adds an "image editor" link and tab to '
-        '"Image" and "News Item" content allowing the user to rotate, flip, '
+      description = 'adds a "Image Editor" link near the image widget '
+        ' allowing the user to rotate, flip, '
         'blur, compress, change contrast & brightness, sharpen, add drop '
         'shadows, crop, resize an image, save as, and apply sepia.',
       long_description = readme + '\n' + history,
@@ -29,8 +29,7 @@ setup(name = 'Products.ImageEditor',
       zip_safe = False,
       install_requires = [
         'setuptools',
-        'collective.js.jquery',
-        'collective.js.jqueryui',
+        'collective.javascript.jqueryui',
       ],
       extras_require = { 'test': [
         'collective.testcaselayer',
